<resources>
    <string name="app_name">Predictor Mundialista</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="e">E</string>
    <string name="f">F</string>
    <string name="g">G</string>
    <string name="h">H</string>
    <string name="send">SendPrediction</string>
    <string name="group1">GroupOneActivity</string>

    <!--Main Activity Resources-->
    <string name="nav_header_title">Menú</string>
    <string name="menu_item_one_activity">Probabilidad para el primero</string>
    <string name="menu_item_two_activity">Probabilidad para el segundo</string>
    <string name="menu_item_three_activity">Probabilidad de pasar</string>
    <string name="menu_item_four_activity">Probabilidad de perder</string>
    <string name="menu_item_five_activity">Países por puntuación</string>
    <string name="menu_group_prediction">Predictor</string>
    <string name="menu_item_prediction">Pronóstico Mundialista</string>

    <string name="navigation_drawer_open">Abrir Menú</string>
    <string name="navigation_drawer_close">Cerrar Menú</string>
    <string name="nav_header_desc">Menú de Navegación</string>

    <string name="one_activity_detail">Seleccione Letra de Grupo para ver Porcentaje de pasar a Octavos de Final en primer lugar.</string>
    <string name="two_activity_detail">Seleccione Letra de Grupo para ver Porcentaje de pasar a Octavos de Final en segundo lugar.</string>
    <string name="three_activity_detail">Seleccione Letra de Grupo para ver Porcentaje de pasar a Octavos de Final.</string>
    <string name="four_activity_detail">Seleccione Letra de Grupo para ver Porcentaje de no pasar a Octavos de Final.</string>
    <string name="five_activity_detail">Puntuación para pasar a Octavos de Final. Seleccione Letra de Grupo para filtrar la información.</string>

</resources>
